  * The --to-folder option can now be used in conjunction with --all or
    --all-subscribed to copy messages from multiple source folders to a single
    destination folder.
  * More concise log messages to reduce visual clutter in the log.
  * Monkeypatched Net::IMAP to fix broken response handling with certain server
    responses, particularly when changing mailboxes on a Dovecot 1.2+ server.
  * Fixed encoding issues when creating mailboxes and getting mailbox lists.
  * Fixed incorrect case-sensitive treatment of the 'INBOX' folder name.
  * Fixed a bug in which Larch would try to copy flags that weren't supported on
    the destination server.
  * Fixed an issue when trying to copy a folder with leading or trailing
    whitespace in the name to Gmail, since Gmail doesn't allow whitespace around
    folder names.

Version 1.0.2 (2009-08-05)
  * Fixed a bug that caused Larch to try to set the read-only \Recent flag on
    the destination server.

Version 1.0.1 (2009-05-10)
  * Ruby 1.9.1 support.
  * Much more robust handling of unexpected server disconnects and dropped
    connections.
  * Added --all option to copy all folders recursively.
  * Added --all-subscribed option to copy all subscribed folders recursively.
  * Added --dry-run option to simulate changes without actually making them.
  * Added --exclude and --exclude-file options to specify folders that should
    not be copied.
  * Added --ssl-certs option to specify a bundle of trusted SSL certificates.
  * Added --ssl-verify option to verify server SSL certificates.
  * Added a new "insane" logging level, which will output all IMAP commands and
    responses to STDERR.
  * Fixed excessive post-scan processing times for very large mailboxes.
  * Fixed potential scan problems with very large mailboxes on certain servers.
  * POSIX signals are no longer trapped on platforms that aren't likely to
    support them.

Version 1.0.0 (2009-03-17)
  * First release.